# frankwolfe

./: .gitignore  README  README.md  away_test.py  boosted_test.py  boostingfw_functions.py  cgs_functions.py  compare.py  package_test.py  pyproject.toml  requirements.txt
examples/: README.md  awayfw_example.ipynb  boostedfw_example.ipynb  cgs_example.ipynb  compare.py  exponential_inconsistent_experiment.py  hyperparam_tuning.py  l1_splitting_nonconvex.py  mismatchfw_example.ipynb  nonneg_matrix_factorization.py  nonneg_mf_sweep 19.13.54.py  nonneg_mf_sweep.py  nonofw_lrnnmf_example.ipynb  nonofw_nonconvexsdp_example.ipynb  nonofw_sparselrmf_example.ipynb  nononfw_robustpca_example.ipynb  nonsmooth_diagonal_constraint.py  paper_figures.py  pathological_inconsistent_experiment.py  semialgebraic_inconsistent_experiment.py  trend_filtering_mf.py
frank_wolfe/: __init__.py
frank_wolfe/algorithms/: __init__.py  away.py  away_step.py  base.py  boosted.py  boosting.py  frames.py  mismatch.py  nono.py  sliding.py
frank_wolfe/core/: __init__.py  lmo.py  objective.py  stepsize.py  utils.py
fw_variants/away/: awayfw_class_version.ipynb
fw_variants/boosting_class/: boosting_class_version.ipynb  boosting_script.py  fw_functions.py
old_tests/: awayfw_functions.py  boosted_test.py  cgs_functions.py  cgs_test.py  nono_test.py  nonofw_functions.py  nonofw_script.py  simple_nono_test.py
paper/: README.md  __init__.py  generate_main_figures.py  generate_nonintersecting_linf_figures.py  generate_trend_filtering_trajectory_figure.py
tests/: test_smoke.py
(+35 files in other folders)
