[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frankwolfe"
version = "0.1.0"
description = "Frank-Wolfe and conditional gradient algorithms."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["frank_wolfe*", "paper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
